[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/MainEditorPanel.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TabContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 38 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tabs" type="Tabs" parent="TabContainer"]
margin_right = 1920.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
tab_align = 0
tab_close_display_policy = 2
scrolling_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -37.5
margin_right = 100.0
margin_bottom = 37.5
dialog_text = "File(s) are not saved.
Close anyway?"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="TabContainer/Tabs" to="." method="_on_Tabs_gui_input"]
[connection signal="tab_clicked" from="TabContainer/Tabs" to="." method="_on_Tabs_tab_clicked"]
[connection signal="tab_close" from="TabContainer/Tabs" to="." method="_on_Tabs_tab_close"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
